--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "element-ui": "^2.15.9",
     "vue": "^2.6.14",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
   },
