--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.14",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.5.2",
+    "vue-virtual-scroll-list": "^2.3.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
