--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.14",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.5.2",
+    "vue-xss": "^1.0.4",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
