--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.9",
+    "highlight.js": "^11.6.0",
     "marked": "^4.0.18",
     "nanoid": "^4.0.0",
     "vue": "^2.6.14",
